--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fhevm/mock-utils": "^0.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -44,14 +45,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
-    "ethers": "^6.15.0",
+    "ethers": "^6.16.0",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
-    "react-router-dom": "^6.30.1",
-    "react-day-picker": "^8.10.1",
     "react-resizable-panels": "^2.1.9",
+    "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
@@ -79,5 +80,3 @@
     "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
-
-
