--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:sepolia": "hardhat test --network sepolia test/WorldSimulationSepolia.ts",
     "lint": "echo \"No linter configured\"",
     "deploy": "hardhat deploy --network sepolia",
-    "deploy:local": "hardhat deploy --network localhost"
+    "deploy:local": "hardhat deploy --network localhost",
+    "build:ui": "cd ui && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
